--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "datamaps": "^0.5.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-navigation": "^3.9.1",
     "react-scripts": "3.0.0"
   },
   "scripts": {
